src/main/webapp/imcms/css/modal_window/imcms-modal_window.css
.imcms-modal-layout {
    background-color: rgba(42, 42, 42, 0.8);
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 10002;
}

.imcms-modal-layout--front {
    z-index: 65534;
}

.imcms-modal-window,
.imcms-edit-modal-window,
.imcms-create-modal-window,
.imcms-modal-view-window,
.imcms-modal-optional-window,
.imcms-create-properties-modal-window,
.imcms-modal-buttons-window {
    position: fixed;
    -webkit-box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    -moz-box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    z-index: 65535;
}

.imcms-modal-window {
    overflow: hidden;
    top: -webkit-calc(50% - 250px);
    top: -moz-calc(50% - 250px);
    top: -ms-calc(50% - 250px);
    top: -o-calc(50% - 250px);
    top: calc(50% - 250px);
    left: -webkit-calc(50% - 130px);
    left: -moz-calc(50% - 130px);
    left: -ms-calc(50% - 130px);
    left: -o-calc(50% - 130px);
    left: calc(50% - 130px);
    height: 200px;
    width: 260px;
}

.imcms-create-modal-window {
    top: -webkit-calc(50% - 250px);
    top: -moz-calc(50% - 250px);
    top: -ms-calc(50% - 250px);
    top: -o-calc(50% - 250px);
    top: calc(50% - 250px);
    left: -webkit-calc(50% - 180px);
    left: -moz-calc(50% - 180px);
    left: -ms-calc(50% - 180px);
    left: -o-calc(50% - 180px);
    left: calc(50% - 180px);
    height: 200px;
    width: 360px;
}

.imcms-create-properties-modal-window {
    top: -moz-calc(50% - 250px);
    top: -ms-calc(50% - 250px);
    top: -o-calc(50% - 250px);

    left: -moz-calc(50% - 180px);
    left: -ms-calc(50% - 180px);
    left: -o-calc(50% - 180px);

    height: 100%;
    width: 100%;
    left: 10%;
}

.imcms-edit-modal-window {
    top: -webkit-calc(50% - 400px);
    top: -moz-calc(50% - 400px);
    top: -ms-calc(50% - 400px);
    top: -o-calc(50% - 400px);
    top: calc(50% - 400px);
    left: -webkit-calc(50% - 500px);
    left: -moz-calc(50% - 500px);
    left: -ms-calc(50% - 500px);
    left: -o-calc(50% - 500px);
    left: calc(50% - 500px);
    width: 1000px;
    background-color: #d9edf7;
}

.imcms-modal-view-window,
.imcms-modal-optional-window {
    overflow: hidden;
    top: -webkit-calc(50% - 300px);
    top: -moz-calc(50% - 300px);
    top: -ms-calc(50% - 300px);
    top: -o-calc(50% - 300px);
    top: calc(50% - 300px);
    left: -webkit-calc(50% - 400px);
    left: -moz-calc(50% - 400px);
    left: -ms-calc(50% - 400px);
    left: -o-calc(50% - 400px);
    left: calc(50% - 400px);
    width: 800px;
    background-color: #d9edf7;
}

.imcms-modal-buttons-window {
    overflow: hidden;
    top: -webkit-calc(50% - 250px);
    top: -moz-calc(50% - 250px);
    top: -ms-calc(50% - 250px);
    top: -o-calc(50% - 250px);
    top: calc(50% - 250px);
    left: -webkit-calc(50% - 130px);
    left: -moz-calc(50% - 130px);
    left: -ms-calc(50% - 130px);
    left: -o-calc(50% - 130px);
    left: calc(50% - 130px);
    width: auto;
    background-color: #f3f5f7;
}

.imcms-edit-modal-window .imcms-modal-body__content {
    margin: 0;
    width: 100%;
}

#content {
    height: 500px;
}

.imcms-modal-body__name {
    width: 100%;
}

.imcms-modal-body__view-box,
.imcms-modal-body__optional-box {
    height: 400px;
    margin: 15px;
    border: 1px solid gainsboro;
    overflow-y: auto;
    overflow-x: auto;
}

.imcms-modal-window--warning,
.imcms-modal-window--error {
    height: auto;
    min-height: 200px;
    max-height: 600px;
}

.imcms-modal-window__modal-head,
.imcms-edit-modal-window__modal-head,
.imcms-create-modal-window__modal-head,
.imcms-modal-optional-window__modal-head,
.imcms-modal-buttons-window__modal-head {
    background-color: #389ecf;
}

.imcms-modal-window--warning .imcms-modal-window__modal-head {
    background-color: #ffc107;
}

.imcms-modal-window--error .imcms-modal-window__modal-head {
    background-color: #ed4337;
}

.imcms-modal-window__modal-body {
    background-color: #f3f5f7;
    display: block;
    width: 100%;
    height: 100px;
}

.imcms-create-modal-window__modal-body,
.imcms-create-properties-modal-window__modal-body {
    background-color: #f3f5f7;
}

.imcms-create-modal-window__modal-body,
.imcms-edit-modal-window__modal-body {
    display: block;
    width: 100%;
    padding: 0 20px 5px 20px;
}

.imcms-create-properties-modal-window__modal-body {
    display: flex;
    width: 80%;
    height: 50%;
    overflow: auto;
}

.imcms-create-properties-modal-window__modal-head {
    width: 80%;
}

.user-properties {
    margin: 12px;
}

.imcms-field__add-property {
    padding: 10px 20px;
}

.imcms-field__update-btn {
    display: block;
}

.imcms-field__save-btn {
    padding: 10px 20px;
    display: none;
}

.user-properties-content__items {
    margin: 10px;
}

.imcms-create-properties-modal-window__modal-footer {
    background-color: #f3f5f7;
    text-align: center;
    width: 80%;
}

.imcms-create-modal-window__modal-footer {
    background-color: #f3f5f7;
    text-align: center;
    width: 100%;
}

.imcms-edit-modal-window__modal-footer {
    margin: 5px 10px 15px 10px;
    text-align: right;
}

.imcms-modal-view-window__modal-footer {
    display: flex;
    justify-content: center;
}

.imcms-modal-window--warning .imcms-modal-window__modal-body,
.imcms-modal-window--error .imcms-modal-window__modal-body {
    height: auto;
}

.imcms-modal-body__text {
    line-height: 25px;
    font-size: 15px;
    text-align: center;
    padding: 5px 15px;
}

.imcms-modal-window__modal-footer {
    background-color: #f3f5f7;
    text-align: center;
    display: block;
    width: 100%;
    height: 58px;
}

.imcms-modal-footer__button {
    display: inline-block;
    margin: 11px 10px;
    padding: 10px 18px;
}

